--- a/styles-for__main_page/styles-main_page.css
+++ b/styles-for__main_page/styles-main_page.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 
-#page, html  {
+#page,
+html {
     height: 100%;
     overflow-x: hidden;
 }
@@ -221,7 +222,6 @@
 #button-close-menu {
     margin-bottom: 5px;
     border: none !important;
-    border: 1px solid red;
     width: 100%;
     height: 100%;
     font-family: fantasy, sans-serif;
@@ -245,27 +245,30 @@
     padding: 40px 0 0 70px;
     font-size: 30px;
     font-weight: 700;
-}
-
-.color-for-team {
-    color: #ff0000;
+    text-wrap: nowrap;
 }
 
 .wrapper__block-1 {
     background-image: url('../images/image2.png');
+    box-shadow: 3px 3px 0 6px #000000;
     background-size: cover;
     display: grid;
     gap: 10px;
-    justify-content: flex-end;
     padding-right: 5vw;
     width: 55vw;
     height: 20vh;
 }
 
-.ul-list{
+.ul-list {
     text-align: center;
     margin-bottom: 2vh;
 }
 
-
-
+.block-1__color {
+    color: #000000;
+    text-shadow:
+        -1px 0 0 #ffffff,
+        0 -1px 0 #ffffff,
+        1px 0 #ffffff,
+        0 1px #ffffff;
+}
