--- a/styles-for__main_page/styles-main_page.css
+++ b/styles-for__main_page/styles-main_page.css
@@ -6,7 +6,6 @@
 
 #page,
 html {
-    height: 100%;
     overflow-x: hidden;
 }
 
@@ -158,7 +157,7 @@ html {
 }
 
 #menu__right-panel {
-    position: absolute;
+    position: fixed;
     right: 0;
     min-width: 20%;
     height: 100%;
@@ -206,7 +205,6 @@ html {
 .menu__item-close:not(:hover) #button-close-menu {
     transform: scale(1);
     color: #000000;
-    border-bottom: 1px solid #000000;
     transition: all 0.5s;
 }
 
@@ -242,33 +240,89 @@ html {
 }
 
 .wrapper__why-we {
-    padding: 40px 0 0 70px;
+    padding: 10px 0 0 70px;
     font-size: 30px;
     font-weight: 700;
     text-wrap: nowrap;
 }
 
 .wrapper__block-1 {
+    margin-top: 20px;
+}
+
+.wrapper__block-1,
+.wrapper__block-2,
+.wrapper__block-3 {
     background-image: url('../images/image2.png');
-    box-shadow: 3px 3px 0 6px #000000;
+    box-shadow: 3px 3px 0 4px #000000;
     background-size: cover;
     display: grid;
+    grid-template-columns: 6fr 1fr;
     gap: 10px;
     padding-right: 5vw;
     width: 55vw;
     height: 20vh;
+    padding-left: 8vw;
+}
+
+.block-1,
+.block-2,
+.block-3 {
+    text-align: center;
 }
 
 .ul-list {
     text-align: center;
     margin-bottom: 2vh;
+    list-style-type: square;
 }
 
-.block-1__color {
+.block-1__color,
+.block-2__color,
+.block-3__color {
+    padding-top: 10px;
     color: #000000;
     text-shadow:
-        -1px 0 0 #ffffff,
-        0 -1px 0 #ffffff,
+        -1px 0 #ffffff,
+        0 -1px #ffffff,
         1px 0 #ffffff,
         0 1px #ffffff;
 }
+
+.wrapper__block-2,
+.wrapper__block-3 {
+    margin-top: 2vh;
+}
+
+.why-we__answer {
+    margin-right: 5vw;
+}
+
+.img-first-line {
+    width: 20%;
+    padding-top: 5vh;
+    animation-name: open-line;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+} 
+
+.img-first-line__img-line {
+    max-width: 100%;
+    min-height: 100px;
+}
+
+.about-us {
+    padding: 50px;
+    font-size: 30px;
+    font-family: fantasy, sans-serif;
+}
+
+.about-us__color-for-about-us {
+    color: #ff0000;
+}
+
+.about-us__padding {
+    padding-top: 30px;
+}
+
