--- a/styles-for__main_page/styles-main_page.css
+++ b/styles-for__main_page/styles-main_page.css
@@ -2,17 +2,21 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: fantasy, sans-serif;
+    font-weight: lighter;
 }
 
 #page,
 html {
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .header-cap {
     display: flex;
     align-items: center;
     position: fixed;
+    z-index: 9999;
     min-width: 100%;
     height: 8vh;
     border-bottom: 1px solid #B8B8B8;
@@ -250,11 +254,28 @@ html {
     margin-top: 20px;
 }
 
+.wrapper__block-1:hover,
+.wrapper__block-2:hover,
+.wrapper__block-3:hover{
+    box-shadow: 5px 5px 2px #B8B8B8;
+    width: 55.3vw;
+    height: 20.3vh;
+    transition: all 0.5s;
+}
+
+.wrapper__block-1:not(:hover),
+.wrapper__block-2:not(:hover),
+.wrapper__block-3:not(:hover){
+    box-shadow: none;
+    width: 55vw;
+    height: 20vh;
+    transition: all 0.5s;
+}
+
 .wrapper__block-1,
 .wrapper__block-2,
 .wrapper__block-3 {
     background-image: url('../images/image2.png');
-    box-shadow: 3px 3px 0 4px #000000;
     background-size: cover;
     display: grid;
     grid-template-columns: 6fr 1fr;
@@ -298,7 +319,7 @@ html {
     margin-right: 5vw;
 }
 
-.img-first-line {
+.img-line {
     width: 20%;
     padding-top: 5vh;
     animation-name: open-line;
@@ -312,8 +333,9 @@ html {
     min-height: 100px;
 }
 
-.about-us {
-    padding: 51px;
+.about-us, 
+.news {
+    padding: 50px;
     font-size: 30px;
     font-family: fantasy, sans-serif;
 }
@@ -326,3 +348,95 @@ html {
     padding-top: 30px;
 }
 
+.our-team-img {
+    width: 100%;
+    height: 20%;
+}
+
+.our-team-img__main-img {
+    max-width: 100%;
+    padding: 10px;
+}
+
+.count-team {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: center;
+}
+
+.number-size__color {
+    color: #ff0000;
+}
+
+.text-size {
+    font-size: 25px;
+}
+
+.count-team__border-right {
+    border-right: 2px solid #B8B8B8;
+}
+
+.count-team__border-right:hover {
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.count-team__border-right:hover .number-size,
+.count-team__border-right:hover .number-size__color{
+    font-size: 50px;
+    transition: all 0.5s;
+}
+
+.count-team__border-right:hover .text-size {
+    font-size: 25px;
+    transition: all 0.5s;
+}
+
+.count-team__border-right:not(:hover) .number-size,
+.count-team__border-right:not(:hover) .number-size__color {
+    font-size: 60px;
+    transition: 0.5s;
+} 
+
+.count-team__border-right:not(:hover) .text-size {
+    font-size: 30px;
+    transition: all 0.5s;
+}
+
+.count-team__border-right:last-child {
+    border: none;
+}
+
+.links {
+    text-decoration: none;
+}
+
+.about-us__content-color {
+    color: #000000;
+}
+
+.news-content {
+    padding: 0 10px 0 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 2fr 2fr 2fr;
+    gap: 10px;
+}
+
+.news-img {
+    max-width: 100%;
+}
+
+.news-img:hover {
+    position: relative;
+    z-index: 9998;
+    transform: scale(0.95);
+    transition: 0.5s;
+    box-shadow: 0 0 40px #4f4f4f;
+}
+
+.news-img:not(:hover){
+    transform: scale(1);
+    transition: 0.5s;
+}
